final 163 lec and 135 last minute notes

--- a/_posts/2025-01-06-cs163-lecture.md
+++ b/_posts/2025-01-06-cs163-lecture.md
@@ -704,3 +704,36 @@ While there are unfilled positions:
     - If the primal graph is Eulerian, then the dual graph will be bipartite
     - Acyclic in primal $\iff$ dual is strongly connected
     - Shortest path in primal $\iff$ min cut in dual
+
+### Planarity Testing
+
+- Find the cyclical ordering of edges around each vertex
+- Determine whether or not the ordering follows Euler's formula
+
+### Planarity Drawnig
+
+- According to Fary's theorem, drawing a planar graph where vertices are given (integer) coordinates and edges are straight lines is always possible
+- The grid on which the graph is drawn must be at least $n/3 \times n/3$
+- There are various known upper bounds
+    - $(2n-3) \times (n-1)$ grid
+    - $(\frac{4n}{3}) \times (\frac{2n}{3})$ grid
+    - $(n-1) \times (n-1)$ grid (the one used for class)
+- A planar graph is **maximal** if you cannot add any more edges while preserving planarity
+    - A graph with a face with four or more vertices CANNOT be maximal; add another edge between two of the vertices in this face 
+        - All faces are triangles if maximal
+    - The number of edges must be $m = 3n-6$
+- It never hurts to add extra edges and turn a planar graph into a maximal planar graph; adding these extra edges takes linear time
+    - Can use a DCEL !
+- A **Schnyder forest** is a representation of a graph such that there are three trees rooted at the outer vertices that each contain all of the other vertices of the graph
+
+<img width="975" alt="Image" src="https://github.com/user-attachments/assets/9996c73c-82dc-42ac-84bb-124eeddc73e4" />
+
+To create a Schnyder forest:
+1. Find a neighbor of one of the three root vertices that only shares two neighbors with the root
+2. Merge this vertex, and repeat the last two steps until all vertices are merged
+3. Unmerge vertices and color
+
+- **Trilinear coordinates** is a coordinate system of 3-tuples; each element of the tuple represents the distance from each of the three sides
+    - Can be converted to Cartesian coordinates by dropping the last element of the 3-tuple
+- To get coordinates of a planar graph, we can create trilinear coordinates for each vertex, where each element of the 3-tuple is the number of vertices in the red/blue/yellow region of the Schnyder forest
+- Connect the vertices with straight lines to finish the planar drawing with straight line
