--- a/_posts/2025-01-06-econ135-lecture.md
+++ b/_posts/2025-01-06-econ135-lecture.md
@@ -174,6 +174,11 @@ $$
     - $Var[\ln(S_t)] = \sigma^2 t$
     - Mode is located at $e^{\mu - \sigma^2}$
 
+#### Log Normal Distribution of Securities
+
+- $\ln S(T) = N(\mu_1, \sigma_1^2)$, where $\mu_1 = \ln S(t) + (\mu - \frac{1}{2}\sigma^2)(T-t)$ and $\sigma_1^2 = \sigma^2(T-t)$
+- $Prob(S \leq S_1) = N(\frac{\ln S_1 - \mu_1}{\sigma_1})$; probability that the security price will be below some set price $S_1$
+
 ### Ito's Lemma
 
 Uses the fact that $(\Delta t)^2 = 0$ to eliminate terms in the second order Taylor expansion
@@ -234,3 +239,23 @@ $$
     - This means that the value of an American call option should equal the price of a European call option
 - The value of an American put option should generally be below $E - S$, but as S gets lower, it might be above $E - S$ due to how little profit is made
     - American puts have different values than European puts because being able to exercise it early can give value, especially when $S$ is close to 0
+
+### Implied vs. Realized Volatility
+- **Implied volatility** is the volatility of a security derived from plugging values into the Black-Scholes formula
+    - Varies across strike price (volatility smile, volatility skew) and across expiry time (term structure)
+- **Historical volatility** is the volatility of a security derived from past prices
+    - Daily returns: $R_n = \frac{S(n) - S(n-1)}{S(n-1)}$
+    - Daily average: $\hat{\mu}_d = \frac{1}{N}\sum^N_{n=1} \ln(1 + R_n)$
+    - Daily volatility: $\hat{\sigma}_d^2 = \frac{1}{N-1} \sum^N_{n=1} (\ln(1+R_n) - \hat{\mu}_d)^2$
+    - Get annualized volatility/average by multiplying daily volatility/average by 252
+
+### Dividends
+
+- When paying dividends, we receive dividends at a continuous rate
+- GBM: $dS = (\mu-\rho)Sdt + \sigma Sdw$, $(dS)^2 = \sigma^2S^2dt$
+- Ito's Lemma: $dV = \frac{\partial V}{\partial S}dS + \frac{\partial V}{\partial t}dt + \frac{1}{2}\frac{\partial^2 V}{\partial S^2}(dS)^2$
+- The Black-Scholes PDE becomes ${\frac{\partial V}{\partial t} + \frac{1}{2}\sigma^2S^2\frac{\partial^2V}{\partial S^2} + (r-\rho)S\frac{\partial V}{\partial S} -rV = 0}$
+- **Call option**: $C_E(S, t) = Se^{-\rho(T-t)}N(d_1) - Ee^{-r(T-t)}N(d_2)$
+- **Put option**: $P_E(S, t) = Ee^{-r(T-t)}N(-d_2) - Se^{-\rho(T-t)}N(-d_1)$
+- $d_1 = \frac{\ln(S/E) + (r - \rho + \sigma^2/2)(T-t)}{\sigma\sqrt{T-t}}$
+- $d_2 = \frac{\ln(S/E) + (r -\rho - \sigma^2/2)(T-t)}{\sigma\sqrt{T-t}} = d_1 - \sigma\sqrt{T-t}$
