--- a/_posts/2025-04-01-econ239-lecture.md
+++ b/_posts/2025-04-01-econ239-lecture.md
@@ -184,3 +184,59 @@ $$
     - PWF is non-linear, has inverted S shape
 - $$\pi(p) = \frac{p^\gamma}{(p^\gamma + (1-p)^\gamma)^{1-\gamma}} \\$$
 - $\gamma$ is a parameter that controls the degree of curvature; smaller values have greater curve, while $\gamma=1$ is linear weighting
+
+# Week 3
+
+- Two main ways to explain financial market anomalies
+    - Preference based approaches: Use Prospect Theory as opposed to EUT
+    - Belief based approaches: Beliefs are not updated correctly after consuming new information
+
+## Equity Premium Puzzle
+
+- There is no production; a tree yields a stochastic endowment each period
+- Consumption equals endowment and dividends; $c_t=y_t=d_t$
+
+## Diagnostic Expectations
+
+- Belief-based model
+- Uses the **representative heuristic**: people judge probability by similarity to a stereotype, leading to base rate neglect and overreaction
+    - One example is that people will guess that red-haired people are Irish despite a vast majority of Irish people not having red hair
+    - Applies to stocks: a stock with long-run growth is overly predicted to continue to go up in price, but they mean-revert once expectations are not met
+- Agents do not use Bayes' rule but instead a pyschological adjustment $$E_t^{\text{diag}} [x_{t+1}] = \mu + \gamma (x_t - \mu)$$
+    - $\mu$ represents the prior belief or historical mean
+    - $x$ is the variable to be predicted
+    - $\gamma > 1$ is the exaggeration factor
+    - The larger the surprise $\vert x_t - \mu \vert$ the greater the overreaction
+    - Overreaction in short run, reversion to mean/fundamentals in the medium/long run
+    - $\mu$ reflects individual beliefs and varies among people depending on one's lived experience
+- Bayesian updating would use Kalman filtering $$E_t[x_{t+1}] = E_{t-1}[x_{t+1}] + K(x_t - E_{t-1}[x_t]), K\in(0,1)$$
+    - Surprise $x_t - E_{t-1}[x_t]$ shifts beliefs proportionally; smooth, statistically sound updating
+- Difference in diagnostic updating can lead to excess volatility
+
+## Prospect Theory Explanation
+
+- Barberis showed that prospect theory can explain the equity premium puzzle (people value wealth and overreact to losses)
+- Excess volatilty puzzle can also be explained by prospect theory; allow loss aversion to depend on prior gains and losses
+- Prior gains = more likely to gamble ("house money effect"), prior losses = less likely to gamble
+
+## Narrow Bracketing
+
+- Explains the phenomenon where people evaluate risky decisions as standalone as opposed to being part of a larger context
+- A stock with returns $(-100, 110, 0.5)$ might be rejected due to the losses it can incur even if it is profitable in the long run
+
+## Market Sentiment
+
+- Investors' general attitude towards the market can heavily influence a stock's valuation
+    - One measurement is the implied volatility index (VIX); is not consistent, changes with speculation
+- Keynes pointed out animal spirits as a separate force in 1936
+- Cass and Shell (1983) argued that random, extrinsic signals ("sunspots") can affect outcomes if people think they matter
+- **Closed-end funds** are broker issued; can only be sold once and never again
+    - Can only be traded on secondary markets
+    - Prices deviate from their net asset value (NAV)
+- **Closed-End Fund Puzzle**: CEFs are sold at a premium when first issued and then trade at a discount in secondary markets
+    - Can be explained by market sentiment (retail investors dominate the market)
+        - Sentiment leads to overpricing at IPO, and shifts in mood leads to discounts
+    - Noise traders makes arbitrage too risky
+    - Limits to arbitrage: hard to short or replicate the NAV portfolio
+- Market sentiment and mood have been proven to affect asset prices
+    - Sunshine effect, weekend/Monday effects, sports outcomes, natural disasters, and tragedies all lead to significant differences in returns the next day
