--- a/_posts/2025-04-02-cs118-lecture.md
+++ b/_posts/2025-04-02-cs118-lecture.md
@@ -61,3 +61,41 @@ toc: true
 - Transformations
     - **Scaling**: Apply a scaling matrix, defined as $S(s_x, s_y, s_z)$ onto a point to transform it
         - Matrix has parameters on the diagonal; can be reversed using the inverse matrix, which is equivalent to $S(1/s_x, 1/s_y, 1/s_z)$
+    - **Rotation**: Apply a rotation matrix which rotates a point about one of the three axes using sine and cosine
+    - **Translation**: Must use a 4D matrix and convert the 3-vector into a 4-vector
+        - **Homogenous coordinates**: A 3-vector and 4-vector representing the same point in 3D; append an extra 1
+        - All of the previous transformations can be converted into 4D matrices in order to work with the homogenous representation
+    - **Shearing**: Translating an object about two out of the three axes by a value proportional to the third axis; affects shape of the object
+- Can concatenate different transformations onto each other to perform complex operations
+    - Most notable is rotating/scaling about a **fixed point** by translating to the origin, performing the transformation, and inverting the first translation
+- An **affine transformation** is any transformation using a 4x4 matrix where the last row is 0 0 0 1
+    - Degree of curve can't be changed, and parallel lines cannot become intersecting lines
+- In **projective transformations**, parallel lines can intersect and vice versa; used when rendering using a pinhole camera
+
+# Graphics Pipeline
+
+- Input: Soup of triangles
+- Output: Image from a particular viewpoint, produced in real time
+    - The output is put into the **frame buffer**, which is updated according to the FPS and sent to the monitor
+- Steps (done in the GPU)
+    - *Vertex Processing*: Process the vertices and normals
+        - Performs transformations on points and per vertex lighting
+        - Transformations include model, view, and projection transforms
+    - *Rasterization*: Convert vertices into a set of fragments (triangles)
+    - *Fragment Processing*: Process individual fragments
+        - Performs texturing and per fragment lighting
+    - *Output Merging*: Combine 3D fragments into 2D space for the display
+
+## Vertex Procesing
+
+- Begins by arranging the objects in the world using a model transform
+    - Involves scaling, rotation, translation, shear transformations to propagate the world space
+- Positions and orients the camera using a view transform
+    - Translate the camera to the origi ($T$) and then rotate it appropriately ($R$); final transformation is $M = RT$
+- Defines properties of the camera (FOV, lens) and projects the 3D space onto the camera using a projection transform
+    - Uses gaze direction (shear), FOV, aspect ratio, near plane (image plane), and far plane (cuts off rest of scene) to create the 2D image
+    - Displays all objects inside of the **view frustum** which is a 3D object connecting the near and far planes 
+        - Must be normalized so conversion to window coordinates is easy
+    - Final transformation matrix: ${v_{clip} = M_{proj} \cdot M_{view} \cdot M_{model} \cdot v}$
+    - Must clip objects to fit on screen by transforming coordinates again
+- TLDR: Takes 3D vertices and puts them on a 2D screen, ensuring that only vertices that are "on-screen" are rendered
