--- a/_posts/2025-04-05-econ113-lecture.md
+++ b/_posts/2025-04-05-econ113-lecture.md
@@ -163,3 +163,68 @@ toc: true
 - A mixed-strategy profile $\sigma^*$ is a **Mixed Nash Equilibrium** iff ${\forall i\in I, \sigma'_i \in \Delta(S_i)\backslash \sigma_i^*, u_i(\sigma^*_i, \sigma^*_{-i}) \geq u_i(\sigma'_i, \sigma^*_{-i})}$
     - Players should only mix over two strategies if they give the same expected utility; use this fact to find the mixed NE
     - A mixed NE can dominate a pure NE, allowing for IEDS
+
+## Social Dillemas
+
+- **Social dilemmas** are social interactions (games) in which individual incentives result in an inferior social outcome for the players (Pareto inefficient)
+- Games like the Pure Coordination Game have no conflicts of interest for either player; both gain utility simultaneously
+- Games like the Matching Pennies Games have a pure conflict of interest; for one player to gain utility, the other has to lose utility
+- Games like the Prisoner's Dilemma has both coordination and conflict; represents a social dilemma
+    - Can also be thought as a *mixed-motive* game; players have an incentive to ciirdubate abd move towards an efficient optimum, but once there, they also have an incentive to shirk
+
+### Public Good Game
+
+- Set of players $I = \{1, 2, \ldots, n\}$
+- Each player chooses $s_i \in S_i \text{ s.t. } S_i = [0, \bar{s}]$
+- Each player has a utility function $u_i = m\sum_{j\in I}s_j + (\bar{s}-s_i)$
+    - Can be thought of as the marginal returns to the total contributions plus the player's remaining budget
+    - Can be rewritten as $u_i = m\sum_{j\neq I}s_j + \bar{s} - (1-m) s_i$
+- Each player's best response is to set $s^*_i = 0$, as an increase to $s_i$ decreases $u_i$
+    - Total social utility in the NE is $U^* = n\bar{s}$
+- The social optimum comes from each player choosing $s_i=s$, making the total social utility $U = \sum (m\sum s + (\bar{s} - s)) = n(mn-1)s + n\bar{s}$
+    - $U$ is increasing in $s$ if $n(mn-1)>0 \rightarrow m>\frac{1}{n}$
+    - If $m>\frac{1}{n}$, then the social optimal strategy is to contribute $\bar{s}$, making the social optimal utility $mn^2\bar{s}$, much larger than the NE social utility
+- Main issue is the **free-rider problem**; the individual marginal return is lower than the individual marginal cost, so no one is incentivized to contribute
+
+### Tragedy of the Commons
+
+- Has two players and a common property of size $y>0$
+- Each $i\in I$ chooses how much to consume today (denoted by $c_i\in [0, \frac{y}{2}]$) and then split what is leftover tomorrow to maximize their utility
+    - $u_i = \ln c_i + \ln(\frac{y-c_i-c_j}{2})$
+    - The first order condition implies that the BR function is $c_i^* = \frac{y-c_j}{2}$
+    - NE becomes $$(c_1^*, c_2^*) = (\frac{y}{3}, \frac{y}{3})$$
+    - Both players consume $\frac{y}{3}$ today and $\frac{y}{6}$ tomorrow
+- Socially optimal strategy is to consume $\hat{c}_i = \frac{y}{4}$ today; both players consume $\frac{y}{4}$ today and $\frac{y}{4}$ tomorrow
+    - Better than the NE total social utility
+- Main issue is the **Tragedy of the Commons**; individuals are incentivized to over-consume today because everyone else will, hurting their utility tomorrow
+    - Gets worse as more players are added
+
+### Contests
+
+- Two individuals $i\in \{1,2\}$ and efforts $e_i\in \mathbb{R}^+$
+- Probability of winning $p_i(e_i, e_j) = \begin{cases}\frac{e_i}{e_i + e_j}, & e_i + e_j > 0\\ \frac{1}{2}, & e_i + e_j = 0\end{cases}$
+- Prize value $v>0$
+- Utility $u_i = p_i(e_i, e_j)v - e_i$
+- BR function: $e_i^* = \sqrt{ve_j} - e_j$
+    - NE becomes $e_i^* = \frac{v}{4}$
+- The NE utility for $i$ is $\frac{v}{4}$; the contest intensifies as the prize increases
+- The socially optimal solution is to choose $\hat{e}_i = 0$, as the utility for both players will be $\frac{v}{2}$
+    - Another way to see this is by looking at the prize vs. effort exerted; total prize is $v$, but the contestants exert a total of $\frac{v}{2}$ effort, so they effectively "pay" for half of the prize
+
+#### Chicken Game
+
+- Two players decide whether or not to fight one another, can either be a chicken or a fighter
+- If both players fight, they both suffer large damage; if neither fights, then they both survive with no loss
+- The two pure NE are for one player to fight and another to be a chicken
+- Can be thought of as a type of contest where you can either give full effort or none
+    - Leads to the chicken game also being a coordination game whereas the contest is not
+
+### Stag Hunt Game
+- Also known as the Assurance Game
+- Basic context: multiple people are hunting a stag, but everyone needs to be focused to kill the stag; if one player goes off to kill a hare, then no one gets the stag (stag gives more utility than hare)
+    - Coordinating to kill the stag is Pareto optimal, but you can only choose to kill the stag if you have **assurance**, or trust, that the others will also kill the stag
+- Players will only kill the stag if they payoff for the stag is vastly greater
+- Assuming player 2 is playing a mixed strategy, player 1 will choose to kill the stag if and only if $q > \frac{1}{x}$, where $q$ is the chance player 2 will choose $S$ and $x$ is the payoff of $S$
+- The **risk-dominant strategy** is to mix and choose $S$ with probability $\frac{1}{x}$
+- Risk-averse players will play a **maxmin** strategy (maximizing the minimum payoff), so they will always choose $H$
+- Assurance games are social dilemmas due to the lack of assurance
