--- a/_posts/2025-04-01-econ239-lecture.md
+++ b/_posts/2025-04-01-econ239-lecture.md
@@ -240,3 +240,130 @@ $$
     - Limits to arbitrage: hard to short or replicate the NAV portfolio
 - Market sentiment and mood have been proven to affect asset prices
     - Sunshine effect, weekend/Monday effects, sports outcomes, natural disasters, and tragedies all lead to significant differences in returns the next day
+
+# Week 4
+
+## Limits to Arbitrage
+
+- Behavioral finance is based on the fact that irrational actors affect prices, but the **arbitrage critique** argues that arbitrageurs will corret these mispricings; this critique has various limits
+    - Noise trader risk, fundamental risk, implementation costs, statistical limits
+
+### Noise Trader Risk
+
+- Model: The market is comprised of informed traders (arbitrageurs), who know the true value of an asset, and noise traders, who are uninformed
+- Most models will have one risky asset and one risk-free asset that give dividends
+- Arbitrageurs will understand there is a mispricing, but the mispricing could worsen before correcitng, leading to a heavier loss; **noise trader risk**
+- Noise traders can profit if sentiment persist, allowing them to make profit and making the amount of noise traders permanently non-zero
+
+### Fundamental Risk
+
+- A mispriced asset is still risky because it takes time for prices to revert back to their fundamentals
+    - This lag can shift what the fundamentals of an asset are, causing prices to veer further away from the original expectation
+- Can be hedged against, but only partially
+    - General strategy: If you believe one stock is overpriced, short it and buy an index of the market it belongs to. If market sentiment changes, then the value of the index will go up, offsetting your loss from the short
+    - The index is not a perfect substitute, making the arbitrage fundamentally risk
+
+### Agency Problems
+
+- Arbitrageurs don't manage their own capital, so investors must decide how much capital to give arbitrageurs
+- **Performance-based arbitrage** limits arbitrage even further since arbitrage is subject to the whims of short-run performance; poor performance leads to capital withdrawals and forced liquidations
+- Mispricing worsens as arbitrageurs scramble out of bad short-run positions
+
+### Costs
+
+- Transaction fees, requirements, etc. cause arbitrage to be hard to implement in reality
+- Jones and Lamont (2002) show that stocks that are expensive to short remain overpriced
+- Overpriced assets are typically not arbitraged against due to the costs of shorting
+- Empirically analyzing mergers highlights these costs; two companies who are merged should trade at the same price, but often one of the companies will be mispriced due to shorting difficulties
+
+### Statistical Limits to Arbitrage
+
+- Arbitrageurs use statistical estimation to learn the fundamental values of assets; known as **statistical arbitrage**
+- $\alpha$ opportunities are bounded due to the fact that they must be estimated from past returns, and sampling will always have error
+    - Opportunities will still be missed
+- Data is sampled from noisy sources, so there is bound to be overfitting, risk, and estimation error
+
+## Overconfidence
+
+- **Overprecision**: Overconfidence in accuracy of beliefs, also known as *miscalibration*
+    - Evidence: Studies have been shown that people have narrower confidence intervals than is true
+    - Explains *disposition effect* (hold onto losers and sell winners), excess volatility + momentum, overreaction to information, inaccurate estimates of effects of mergers
+- **Overplacement**: Belief that one is better than others, such as believing one is above average in driving
+    - Evidence: Studies have shown that over 50% of people will call themselves above average
+    - *Illusory superiority*: Most people will rate themselves in the top half
+- High market turnover is evidence that people are overconfident
+    - Average share of stock changes hands more than once a year; efficient, informed traders should hold onto stocks for longer due to transaction costs and symmetric info
+    - Overplacement: Investors believe they are better than others at trading
+    - Overprecision: Investors are more confident in their expectations than is true
+- Leads to excess volatility, lower returns than expected
+- Studies have shown that higher trading frequency leads to lower net returns, mostly due to trading costs
+    - Shows that investors are overconfident
+- Overconfidence can be attributed to various things
+    - *Biology*: Overconfidence was required to survive because they needed to hunt, take risks, etc.; especially prevalent in men
+    - *Biased self-attribution*: Belief that good outcomes are due to skill and bad outcomes are due to luck
+    - *Confirmation bias*: People look for evidence that supports what they already believe
+- Overconfidence survives because they can earn higher payoffs in bull markets, they reminisce on early gains, selection bias, and feedback delay
+
+# Week 5
+
+## Other Modeling Approaches
+
+### Rational Inattention
+
+- No agent has full information, and information comes at a cost; rational agents must choose how to obtain information and for what cost
+- In this model, information acquisition is endogenous, and heterogeneity is derived from preferences towards preferences
+- Contrasts the limit to arbitrage approach, as agents don't have full information
+- Idea: choose what information structure ($P(s\vert x)$) to follow that gives you information on your perceived state of the world $s$ given the true state of the world $x$
+    - Actions are chosen probabilistically; mistakes are optimal due to cognitive limits
+    - Higher payoff means that an action is more likely to be chosen
+    - Small payoff differences are smoothed out
+    - Information constraints reationalize errors and delays in decision-making
+- This leads to under-diversified portfolios, bias towards local stocks, and actively managed mutual funds
+    - **Home Bias Puzzle**: Investors disproportionately hold domestic assets despite theoretically gains through global diversification
+        - Explained by even a slight home information edge providing a large incentive to specialize
+- Different from **Cognitive Uncertainty**; rational inattention states that actors make rational choices from limited information, but cognitive uncertainty states that actors have doubts about their own actions and judgements
+
+### Cognitive Uncertainty
+
+- Actors have second-order doubts about their actions
+    - Leads to internal noise, reliance on intuitive heuristics
+- Idea: $a^*(p)$ represents the DM's true expected utility-maximizing action, but the DM has an imperfect model of it due to limited cognition
+    - DM receives a cognitive signal $s_i = a^*(p)+\varepsilon_i$ and holds a prior belief ${a^*(p)\sim \mathcal{N}(d_i, \sigma^2)}$ where $d_i$ is the default action
+- Explains underreaction and probability weighting
+
+### Information Ambiguity
+
+- Agents do not trust the quality of news sources (signals); leads to agents having a set of plausible priors as opposed to a single prior
+- Each signal follows $s = \theta + \varepsilon, \varepsilon \sim \mathcal{N}(0, \sigma_s^2)$ where $\sigma_s^2$ is random inside of a range
+    - In the Bayesian case, we know what $\sigma_s^2$ is, but with ambiguity we have no idea
+- With multiple priors, agents evaluate actions under a worst-case posterior, overweighting bad news compared to good news
+    - AKA assymetric response to news, overweighting of signals that convey bad news, assets should be undervalued when signals are ambiguous
+
+### Experience Effects
+
+- Theoretically, DMs have access to all data throughout all of history
+- Empirical data shows that recent and live experience matters more than history that was not personally experienced
+    - **Experience Effects**: Professionals and amateurs are biased towards their lived experience
+- Bulkley and Harris (1997) showed that analysts overweight recent earnings growth in forecasting long-term earnings and that this overoptimism is often wrong
+
+## Week 6
+
+- A **bubble** has different meanings depending on who you ask; violates EMH, but behaviorists will justify bubbles by citing herd mentality
+- Historical examples
+    - First recorded bubble was in the Netherlands where speculators drove up the price of tulips (Garber (1989))
+    - Dot-com bubble was a big recent bubble regarding tech companies
+- Bubbles can be illustrated by the cyclically adjusted price/earnings ratio (CAPE) which has a long-run average of 16-17
+- Rational bubbles require an infinite horizon, grow at some rate $r$, and grow even faster if there is a probability of bursting
+    - To remove bubbles, economists use the **transverality condition** where they set $b_t = 0$; justified if agents live forever + care only about dividends and markets are efficient
+        - Actors obviously live finitely and buy for resale (Greater Fool fallacy)
+- Tirole (1985) gives an overlapping generations model of bubbles to justify bubbles using intrinsically worthless fiat money
+    - Money has value because it can be resold and because actors will die
+- Cryptocurrency also has value because of bubbles
+    - Limited supply leads to resale demand (Harrison and Kreps, 1978)
+    - Social and signalling value; owners can express ideology and identity (Sockin and Xiong, 2020)
+    - Network access: Owning a coin gives you access to the platform (Catalini and Gans, 2016)
+    - Dual-role utility: Tokens provide access to services and incentivize trust (Pagnotta and Buraschi, 2018)
+- Harrison and Kreps showed that the market price will be greater than the fundamental price under one's beliefs because they believe someone else will buy it for more (heterogenous beliefs)
+- Abreu-Brunnermeier Bubble-Riding Model (2003) shows that bubbles can exist with arbitrageurs because arbitrageurs will disagree when the bubble will burst, leading to the bubble growing larger and larger
+- **No-Trade Theorem** states that no speculative trade should occur if a market has common priors, symmetric information, and rational agents
+    - Bubbles will only persist if there are *heterogenous beliefs*, *assymetric or delayed information*, and/or *behavioral biases or noise trading*
