--- a/_posts/2025-04-02-cs118-lecture.md
+++ b/_posts/2025-04-02-cs118-lecture.md
@@ -88,14 +88,117 @@ toc: true
 
 ## Vertex Procesing
 
-- Begins by arranging the objects in the world using a model transform
+- *Model Transform*: Begins by arranging the objects in the world using a model transform
     - Involves scaling, rotation, translation, shear transformations to propagate the world space
-- Positions and orients the camera using a view transform
+- *View Transform*: Positions and orients the camera using a view transform
     - Translate the camera to the origi ($T$) and then rotate it appropriately ($R$); final transformation is $M = RT$
-- Defines properties of the camera (FOV, lens) and projects the 3D space onto the camera using a projection transform
+- *Projection Transform*: Defines properties of the camera (FOV, lens) and projects the 3D space onto the camera using a projection transform
     - Uses gaze direction (shear), FOV, aspect ratio, near plane (image plane), and far plane (cuts off rest of scene) to create the 2D image
     - Displays all objects inside of the **view frustum** which is a 3D object connecting the near and far planes 
-        - Must be normalized so conversion to window coordinates is easy
+        - Must be normalized (to a cube) so conversion to window coordinates is easy
     - Final transformation matrix: ${v_{clip} = M_{proj} \cdot M_{view} \cdot M_{model} \cdot v}$
     - Must clip objects to fit on screen by transforming coordinates again
+    - z-coordinate is retained for occlusion
+- A Viewport Transform is performed
 - TLDR: Takes 3D vertices and puts them on a 2D screen, ensuring that only vertices that are "on-screen" are rendered
+
+## Rasterizer
+
+- After clipping and retriangulating, the rasterizer "fills in" the interiors of triangles
+    - Main issue: Edges of triangles are non-integer, but pixels on a screen are integer; must interpolate vertex attributes onto the pixels
+- One strategy is to use **scanline interpolation** which involves sweeping across the 2D plane to determine which pixels fall inside of a triangle and interpolating the pixel accordingly
+    - The z-coordinate allows the rasterizer to figure out which shapes take precedence over others via the *depth buffer*; known as **occlusion resolution**
+- The rasterizer also performs lighting and shading which is extremely difficult to model due to the vast amount of light sources (direct + indirect illumination)
+- Lighting 
+    - A simple model would be to remove indirect lighting and to replace with one lighting term
+    - **Phong illumination/lighting** calculates three channels (ambient, diffuse, specular) and combinews them to light objects
+        - Requires a material color and a light color for each channel
+        - Ambient: viewer-independent, acts as a "background color"
+        - Diffuse: light coming off of a surface, relies on the angle of lighting and the normal of the surface
+            - Formula: $m\cdot l \cdot \max(L\cdot N, 0)$, where $L\cdot N$ is the dot product between the light and the normal angles
+        - Specular: Reflected light depending on where the viewer is standing, models the shininess of objects
+            - Formula: $m\cdot l \cdot \max(R\cdot V, 0)^{shininess}$, where $R\cdot V$ is the dot product of the refelector and viewer angles
+            - $shininess$ is an additional parameter required for the specular channel
+    - **Attentuation** is used to model the falloff of light intensity w.r.t. distance
+        - Formula for attentuation coefficient: $\frac{1}{k_c + k_ld_i + k_qd_i^2}$
+- Shading
+    - Shading is the acutal computation of the color for each pixel/fragment/vertex whereas lighting gives the model to do so
+    - **Flat shading**: Compute color once per triangle using some model (like Phong lighting)
+        - Fast to compute, but looks very unrealistic
+    - **Gourand shading**: Compute color once per vertex and interpolate these colors to the triangles
+        - A little slower than flat shading, but looks a little more realistic
+    - **Phong shading**: Compute color once per fragment which requires interpolation of per-vertex normals
+        - Most realistic, but slowest strategy
+    - Vertex shading will be done before the rasterizer while fragment shading will be done afterwards
+- Texture mapping is also done in the rasterizer, and the main operation is to map coordinates from the 3D surface (x, y, z) into 2D texture coordinates (u, v)
+    - These coordinates are interpolated for each fragment
+    - Since texture coordinates are not guaranteed to be integer, we use *texture filtering* and use bilinear interpolation
+
+# VR Display
+
+- Various issues with having a high quality display
+    - *Visual acuity*: VR world must be precise, like reality - should be able to see 15 pixels per inch from 20 feet away
+        - Varies over different eyes
+    - *Visual field*: Seeing with one eye vs. two eyes means that the FOOV should be different
+    - *Temporal resolution*: Video should be smooth in order to not be offputting
+    - *Depth*: Depth is hard to work with; many issues exist like disparity, vergence, accomodation, blur
+- Biology of vision
+    - Eye peforms low-level processing, brain does high-level
+    - Most of the eye's functions are concentrated within a small part of the eye
+    - Eye uses cones and rods to process color/light; short, medium, and long wave cones process RGB colors
+    - Each eye has its own **monocular** visual field that it can see
+        - The **binocular (stereo) visual field** is the overlap of the two eyes; allows you to see depth 
+    - Monocular = *periphery*, binocular = *fovea*
+        - Can only see color in fovea
+- Headsets are limited because there is a minimum distance that people are able to focus at 
+    - Strategy: Use two lenses, increasing the FOV and weight
+- Visual acuity is difficult to achieve because the photoreceptors capture 1 arcmin of visual angle
+    - Leads to requiring a massive amount of pixels; high compute and data requirements
+- **Minimum Angle of Resolution**: $\omega = me + \omega_0$
+    - $\omega$: resolution in degrees per cycle
+    - $e$: angle per eccentricity in degrees
+    - $\omega_0$: smallest resolvable angle in fovea in degrees per cycle
+- Visual acuity can be calculated as the reciprocal of MAR ($\omega$)
+    - Use MAR to accomplish **foveated rendering**: Split the image into multiple layers (inner/foveal, middle, outer) based on MAR and render them as more/less blurry
+        - Less compute since less pixels have to be rendered; great speedup
+- Depth can be perceived in both binocular and monocular vision
+    - Monocular: Accomodation, retinal blue, motion parallax
+    - Binocular: (Con)vergence, disparity
+    - Pictorial cues: Shading, perspective, texture
+- **Vergence**: Convergence of muscles to fixate on a single object
+- **Accomodation**: Ability of lens to focus on fixated object
+- **Vergence-Accomodation Conflict**: Eyes try to focus on the screen in front of them, but the screen "fools" them into perceiving depth, creating a difference in vergence and accomodation; causes much fatigure
+- **Motion parallax**: Ability to see different objects while moving
+- **Retinal blur**: Blurring of objects when eyes focus on something different 
+    - Blur can be calculated using $c_z = ar\left(\frac{1}{f} - \frac{1}{z}\right)$
+        - $r$: Distance to sensor
+        - $a$: Aperture, controlled by pupil (such as by squinting)
+        - $f$: Focal length, controlled by accomodation
+        - $z$: The depth, $d$, that is focused on
+
+# Stereo Display
+
+- One way to achieve stereo vision using 2D is through glasses
+    - Can use anaglyph, polarization, etc.
+    - General strategy: have each eye see a different color/polarization/etc., forcing them to work together to see a 3D image
+    - *Polarization*: Each eye sees different rows + columns, i.e. right eye sees even while left eye sees odd (different polarizations)
+        - Popular example is RealD
+        - Inexpensive and makes gaze direction irrelevant
+        - Screen must be polarization-preserving, and this strategy loses brightness + resolution
+    - *Shutter*: Each lens opens and closes exactly when the frame changes
+        - Somewhat expensive, requires fast display, screen must be synced with glasses
+        - Active glasses
+    - *Chromatic Filters*: Uses two projectors to project two different colored images (one for each eye)
+        - Somewhat expensive, can't use in theaters
+    - *Anaglyph*: Render stereo images in different colors so that each eye sees a different image
+        - Most inexpensive glasses
+        - Has issues with colors
+        - To create a full-color anaglyph image, render a left and right image then color left using red channel and right using green + blue (red-cyan anaglyph)
+- **Parallax**: The relative distance of a 3D point projected into the 2 stereo images
+    - Positive parallax means point is behind projection plane, zero parallax means point is on the plane, negative means point is in front
+    - Must use horizontal parallax where both eyes have the same projection plane (screen), known as *off-axis* projection
+        - Projection previously was only from one viewpoint, but now that there are two, we have to account for the horizontal parallax
+
+## HMD Display
+
+- Basic idea: Have a lens that is a short distance away from a micro display
