--- a/_posts/2025-04-07-cs179-lecture.md
+++ b/_posts/2025-04-07-cs179-lecture.md
@@ -2,7 +2,7 @@
 layout: post
 description: COMPSCI 179
 categories: [cs179, lecture, spring25, markdown]
-title: Virtual Reality
+title: Algorithms for Probabilistic and Deterministic Graphical Models
 use-math: true
 toc: true
 ---
